[tool.poetry]
name = "nlp_prepro"
version = "0.1.0"
description = ""
authors = ["andmohiko <andmohiko@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
pandas = "^1.1.4"
gensim = "^3.8.3"
mecab = "^0.996.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
